# hge-multi

./: .gitmodules  CMakeLists.txt  README.md  license.txt
cximage/: CMakeLists.txt  license.txt  ximabmp.cpp  ximacfg.h  ximadef.h  ximadsp.cpp  ximaenc.cpp  ximaexif.cpp  ximage.cpp  ximage.h  ximagif.cpp  ximahist.cpp  ximaico.cpp  ximainfo.cpp  ximaint.cpp  ximajas.cpp  ximajbg.cpp  ximajpg.cpp  ximalpha.cpp  ximalyr.cpp  ximamng.cpp  ximapal.cpp  ximapcx.cpp  ximapng.cpp  ximapng.h  ximapsd.cpp  ximaraw.cpp  ximasel.cpp  ximaska.cpp  ximatga.cpp  ximatif.cpp  ximatran.cpp  ximawbmp.cpp  ximawnd.cpp  xiofile.h
hge/: CMakeLists.txt  README.md  license.txt
hge/include/: hge.h  hgegui.h  hgeresource.h  unix_compat.h
hge/src/core/: CMakeLists.txt
hge/src/core/unix/: graphics.cpp  hge_impl.h  macosx_support.mm  resource.cpp  system.cpp
hge/src/core/windows/: resource.cpp
hge/src/helpers/: hgegui.cpp  hgeresource.cpp  resources.cpp  resources.h
hge/src/texasm/: gfx_object.h
hge/tools/: CMakeLists.txt
hge/tutorials/: CMakeLists.txt
hge/tutorials/tutorial02/: hge_tut02.cpp
hge/tutorials/tutorial08/: hge_tut08.cpp
